# gnode

./: .anjuta_sym_db.db  Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: libtool  src
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  auxiliar_graph.vala  gnode  gnode-resources.c  gnode.c  gnode.gresource.xml  gnode.ui  gnode.vala  graph.c  graph.vala  link.c  link.vala  main.c  main.vala  node.c  node.vala
src/.deps/: gnode-resources.Po  gnode.Po  graph.Po  link.Po  main.Po  node.Po
